[gd_scene load_steps=8 format=2]

[ext_resource path="res://stages/menu/menu_stage.gd" type="Script" id=1]
[ext_resource path="res://interface/themes/holiday.theme.tres" type="Theme" id=2]
[ext_resource path="res://interface/santas_workshop.png" type="Texture" id=3]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 color_a : hint_color = vec4(1.0, 0.0, 0.0, 1.0);
uniform vec4 color_b : hint_color = vec4(0.0, 0.0, 1.0, 1.0);

void fragment() {
	float screen_w = 1.0 / SCREEN_PIXEL_SIZE.x;
	float factor = fract((UV.x + UV.y/6.0 + TIME * 0.02) * screen_w/256.0);
	COLOR = mix(color_a, color_b, step(factor, 0.5));
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/color_a = Color( 0.678431, 0.113725, 0.137255, 1 )
shader_param/color_b = Color( 0.32549, 0.509804, 0.290196, 1 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.701754, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 0, 0, 0, 0.0143103, 0, 0, 0, 0.321569 )

[sub_resource type="GradientTexture2D" id=4]
flags = 0
gradient = SubResource( 3 )
width = 256
height = 400
fill = 1
fill_from = Vector2( 0.5, 0.5 )
fill_to = Vector2( 0.926667, 0.075 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.901961, 0.105882, 0.121569, 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 4 )
stretch_mode = 7

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0
custom_constants/separation = 24
alignment = 2

[node name="Space2" type="Control" parent="VBoxContainer"]
margin_right = 976.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 976.0
margin_bottom = 327.0
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Space" type="Control" parent="VBoxContainer"]
margin_top = 351.0
margin_right = 976.0
margin_bottom = 375.0
rect_min_size = Vector2( 0, 24 )

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_left = 390.0
margin_top = 399.0
margin_right = 586.0
margin_bottom = 434.0
size_flags_horizontal = 4
text = "Enter Workshop"

[node name="ToggleFullScreen" type="CheckBox" parent="VBoxContainer"]
margin_left = 411.0
margin_top = 458.0
margin_right = 565.0
margin_bottom = 493.0
size_flags_horizontal = 4
text = "Fullscreen"

[node name="ButtonQuit" type="Button" parent="VBoxContainer"]
margin_left = 462.0
margin_top = 517.0
margin_right = 513.0
margin_bottom = 552.0
size_flags_horizontal = 4
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_pressed"]
[connection signal="toggled" from="VBoxContainer/ToggleFullScreen" to="." method="_on_full_screen_toggled"]
[connection signal="pressed" from="VBoxContainer/ButtonQuit" to="." method="_on_quit_pressed"]
